<resources>

    <string name="app_name" translatable="false">Traffic Laws</string>
    <string name="pdd">ПДД и Штрафы КР</string>
    <string name="fines">Штрафы</string>
    <string name="trafficLaws">ПДД</string>
    <string name="callcentre">Телефоны и связи</string>
    <string name="addition">Расчет налога 4 группы</string>
    <string name="car_insurance" translatable="false">Страхование ТС</string>
    <string name="auto_news_cr" translatable="false">Автоновости КР</string>
    <string name="gas_station_prices">Цены на Азс</string>
    <string name="shtrafy">Штрафы</string>
    <string name="statya" translatable="false">(В редакции постановлений Правительства КР от 3 марта 2009 года N 136, 28 мая 2012 года N 329, 27 сентября 2012 года N 656, 20 октября 2015 года № 714, 16 января 2016 года № 9, 25 декабря 2017 года № 833, 7 октября 2019 года № 522 , 31 октября 2019 года № 588 )</string>
    <string name="extronyecall" translatable="false">Экстронные службы</string>
    <string name="reder" translatable="false">Пожарная служба</string>
    <string name="chast" translatable="false">Часть %s</string>
    <string name="polisya" translatable="false">Милиция</string>
    <string name="medical" translatable="false"><![CDATA[<<Медикал Сервис>> частная медицинская служба]]></string>
    <string name="description_gazprom" translatable="false">Тут представлены текущие цены на бензин, на газ, и дизельное топливо.</string>
    <string name="gazprom_neft" translatable="false">Газпром нефть Азия</string>
    <string name="_1_24" translatable="false">База данных на сервере обновляться 1 раз в течение 24 часов согласно данным, приведенным на официальных сайтах автозаправочных компании</string>
    <string name="kg_menu" translatable="false">kg</string>
    <string name="osaga">ОСАГО - страхование не автомобиля, а ответственности водителя. Если водитель стал виновником аварии, расходы на ремонт машины пострадавшего гражданина и его лечение оплатит страховая компания. Свой автомобиль виновник ДТП будет восстанавливать сам. Если человек пострадал в аварии, его расходы, соответственно, возместит страховщик виновника. Страхование автомобиля относится к другому виду страховки - КАСКО. Оно является добровольным. Пока правительство в лице Госфиннадзора определяет минимальную сумму полиса ОСАГО. Предварительно она составит 1 тыс. 680 сомов в год. Точно это станет известно в конце января после общественных слушаний и подписания постановления правительства. Kaktus.media решил собрать ответы на самые распространенные и даже глупые вопросы об ОСАГО. Как оформить ОСАГО и что оно собой представляет, можно прочитать здесь. 01 Так когда вводится обязательное страхование водителей и авто? 7 февраля у каждого автовладельца, который активно использует свой автомобиль, должно быть ОСАГО. Это прописано в законодательстве страны. Исключений быть не может. 02 Где покупать полис ОСАГО? Приобрести полис можно в любой страховой компании Кыргызстана. Всего по стране их 16. 03 Сколько будет стоить полис? Минимальная стоимость полиса будет 1 тыс. 680 сомов. Далее эта сумма умножается на коэффициент. Вообще стоимость полиса может отличаться в зависимости от модификации автомобиля, объема двигателя, количества человек, вписанных в ОСАГО, стажа водителя, возраста водителя и периода, на который берется страховка. Эти коэффициенты как раз и выставлены на общественное обсуждение и до конца января будут утверждены правительством. Но разные пакеты страховок может также разрабатывать сама страховая компания. 04 Как на стоимость полиса влияет возраст водителя и стаж? Рассчитываться сумма полиса будет в зависимости от того, вы старше или моложе 25 лет, у вас стаж вождения более или менее трех лет. Сколько будет стоить ОСАГО? И другие вопросы о страховании ответственности водителя 05 Как на стоимость полиса влияет тип автомобиля? При определении мощности двигателя транспортного средства используются данные свидетельства о регистрации автотранспортного средства. А ниже кабмин предлагает следующие коэффициенты для расчета суммы страхового полиса. Сколько будет стоить ОСАГО? И другие вопросы о страховании ответственности водителя Так, примерная стоимость страховки автомобиля Honda Fit с объемом двигателя до 2000 кубических сантиметров (1,3 л), владельцем которого является 25-летний молодой человек с 5-летним стажем вождения, равняется около 2 тыс. 250 сомов. Полис для Subaru Forester с объемом в 2,5 л, на котором ездят два человека со стажем менее 3 лет и которым не исполнилось 25 лет, обойдется в 3 тыс. 200 сомов. 06 Может ли стоимость страховки измениться в следующие годы? Да. На последующие страховки будут влиять предыдущие. По окончании годового срока страхования стоимость страхового полиса может измениться, если в период действия предыдущих договоров обязательного страхования были страховые случаи. В проекте постановления есть таблица, как будет меняться коэффициент в зависимости от того, были у вас раньше 1, 2, 3 или более 3 страховых случаев. 07 Можно купить один полис на несколько автомобилей? Нет, каждый полис приобретается только для одного автомобиля. Но его можно купить на несколько водителей. Например, муж владеет автомобилем, но им пользуются и жена, и сын. Всех их можно вписать в полис. Всего в документ можно внести до пяти человек. Важно: внимательно читайте договор со страховой компанией при подписании. 08 А можно обойтись без полиса ОСАГО? Можно, если ваш автомобиль вообще не используется. Совсем, то есть стоит в гараже, не на ходу. В остальных случаях полис должен быть обязательно. 09 У кого есть право проверять наличие ОСАГО? ГУОБДД будет проверять наличие полиса ОСАГО у водителей. Штраф - от 3 тыс. сомов. Это прописано в Кодексе о нарушениях. Сотрудники налоговой службы не имеют права проверять наличие ОСАГО при уплате транспортного налога. 10 Я намерен купить автомобиль. Как проверить наличие ОСАГО? Ну, в первую очередь довериться продавцу, который покажет документы. В департаменте регистрации транспортных средств ГРС пока не знают, будут ли они учитывать и проверять наличие ОСАГО у автовладельца при переоформлении автомобиля. 11 Когда начнут штрафовать из-за отсутствия полиса? По идее, с 7 февраля. Госфиннадзор предлагает с 7 февраля 2019 года штрафовать за отсутствие полиса только тех водителей, чьи машины зарегистрированы в другой стране. Для кыргызских автомобилей предлагается послабление - не штрафовать до 7 августа 2019 года. Но это еще не точно. 12 Покупать ОСАГО надо только один раз? Сроки прописаны самые разные. Минимальный - 1 день. Но лучше и дешевле покупать на год. При смене автомобиля необходимо покупать новый полис либо вносить в старый поправки, если это разрешают условия контракта по полису.</string>


</resources>
