<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pdd"
            android:gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="99dp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">




            <androidx.cardview.widget.CardView
                android:id="@+id/fines"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_bribe"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="134dp"
                    android:gravity="center"
                    android:text="@string/fines"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/trafficLaws"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/fines"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_warning"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="148dp"
                    android:gravity="center"
                    android:text="@string/trafficLaws"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/callCentre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/trafficLaws"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_telephone"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="108dp"
                    android:gravity="center"
                    android:text="@string/callcentre"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/gas_station_prices"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/callCentre"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_fuel"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="120dp"
                    android:gravity="center"
                    android:text="@string/gas_station_prices"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/auto_news_cr"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/gas_station_prices"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_newspaper"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="109dp"
                    android:gravity="center"
                    android:text="@string/auto_news_cr"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/car_insurance"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/auto_news_cr"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_car_insurance"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="110dp"
                    android:gravity="center"
                    android:text="@string/car_insurance"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/addition"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/car_insurance"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_more"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="111dp"
                    android:gravity="center"
                    android:text="@string/addition"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>





</LinearLayout>