<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".gasStationPrices.GasStationPricesActivity">
    <LinearLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_navigate"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="21dp"
            android:onClick="onClick"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:text="@string/gas_station_prices"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/app_bar_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            app:titleTextColor="#fff"-->
<!--            app:title="Face"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <TextView-->
<!--                android:id="@+id/toolbar_title"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:singleLine="true"-->
<!--                android:text="@string/gas_station_prices"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="normal" />-->
<!--        </androidx.appcompat.widget.Toolbar>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_gazprom"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="16dp">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gazprom_neft_asia1_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/background_cardview"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gazprom_neft_asia1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gazprom_neft"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_navigate_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gazprom_neft_asia1"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bishkek_petrolium_asia_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/background_cardview"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bishkek_petrolium_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bishkek Petrolium (ШНОС)"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_navigate_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bishkek_petrolium_asia"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rosneft_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:cardCornerRadius="10dp"
        android:background="@drawable/background_cardview"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rosneft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Роснефть (БНК)"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginStart="180dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_navigate_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rosneft"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

<androidx.cardview.widget.CardView
    android:id="@+id/red_petroleum_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="16dp"
    app:cardCornerRadius="10dp"
    android:background="@drawable/background_cardview"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_gravity="center">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/red_petroleum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Red Petroleum"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_navigate_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/red_petroleum"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="Последнее обновление: "
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/text"
            android:text="11.09.2019"
            android:textSize="14sp"
            android:textColor="#CE6211"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="Обновить"
        android:textColor="@color/white"
        android:elevation="4dp"
        android:translationZ="4dp"
        android:background="@drawable/background_button"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:text="@string/_1_24"/>



</LinearLayout>
</ScrollView>

    </LinearLayout>